ko/15.7/admin/fileconfig-guide.rst
=============================
파일 크롤링(파일 서버 검색)
=============================

개요
====

파일 크롤링은 사내 파일 서버나 Windows 공유 폴더, 클라우드 스토리지에 있는 문서를 |Fess| 의 인덱스에 등록하여 전문 검색(파일 서버 검색)할 수 있도록 하는 기능입니다. Word・Excel・PowerPoint・PDF 등 다양한 파일 형식을 지원합니다.

파일 크롤링 설정 페이지에서는 파일 시스템이나 공유 네트워크의 폴더에 있는 파일을 크롤링하는 설정을 관리할 수 있습니다.

크롤링 대상은 "경로"에 지정하는 프로토콜에 따라 결정됩니다.

- ``file:/`` … 로컬 또는 마운트된 파일 시스템
- ``smb://`` … Windows 파일 서버/공유 폴더(SMB/CIFS)
- ``ftp://`` / ``ftps://`` … FTP 서버
- ``s3://`` … Amazon S3 버킷
- ``gcs://`` … Google Cloud Storage 버킷

관리 방법
======

표시 방법
------

아래 그림의 파일 크롤링 설정 목록 페이지를 열려면 왼쪽 메뉴의 [크롤러 > 파일 시스템]을 클릭합니다.

|image0|

편집하려면 설정 이름을 클릭합니다.

설정 생성
-------

파일 크롤링 설정 페이지를 열려면 신규 생성 버튼을 클릭합니다.

|image1|

설정 항목
------

이름
::::

설정 이름입니다.

경로
::::

이 경로에서 크롤링을 시작할 위치를 지정합니다(예: file:/ 또는 smb://).

크롤링 대상 경로
:::::::::::::::::

이 항목에 지정한 정규 표현식(Java 형식)과 일치하는 경로는 |Fess| 크롤러의 대상이 됩니다.

크롤링 대상에서 제외할 경로
:::::::::::::::::::::

이 항목에 지정한 정규 표현식(Java 형식)과 일치하는 경로는 |Fess| 크롤러의 대상이 되지 않습니다.

검색 대상 경로
::::::::::::::

이 항목에 지정한 정규 표현식(Java 형식)과 일치하는 경로는 검색 대상이 됩니다.

검색 대상에서 제외할 경로
::::::::::::::::::

이 항목에 지정한 정규 표현식(Java 형식)과 일치하는 경로는 검색 대상이 되지 않습니다.

설정 파라미터
::::::::::::

크롤링 설정 정보를 지정할 수 있습니다.

깊이
::::

크롤링할 파일 시스템 구조의 깊이를 지정합니다.

최대 접근 횟수
:::::::::::

인덱싱할 경로의 수를 지정합니다.

스레드 수
::::::::

이 설정에 사용할 스레드 수를 지정합니다.

간격
::::

스레드가 경로를 크롤링할 때마다 대기할 시간을 지정합니다.

부스트 값
::::::::

부스트 값은 이 설정으로 인덱싱된 문서의 우선순위입니다.

권한
:::::::::::

이 설정의 권한을 지정합니다.
권한 지정 방법은 예를 들어, developer 그룹에 속한 사용자에게 검색 결과를 표시하려면 {group}developer로 지정합니다.
사용자 단위 지정은 {user}사용자명, 역할 단위 지정은 {role}역할명, 그룹 단위 지정은 {group}그룹명으로 지정합니다.

가상 호스트
::::::::

가상 호스트의 호스트명을 지정합니다.
자세한 내용은 :doc:`설정 가이드의 가상 호스트 <../config/security-virtual-host>` 를 참조하십시오.

상태
::::

이 설정이 활성화되어 있으면 기본 크롤러의 작업에 이 설정이 포함되어 크롤링을 수행합니다.

설명
::::

설명을 입력할 수 있습니다.

설정 삭제
--------

목록 페이지의 설정 이름을 클릭하고 삭제 버튼을 클릭하면 확인 화면이 표시됩니다. 삭제 버튼을 누르면 설정이 삭제됩니다.

예
==

로컬 파일 크롤링
--------------------

/home/share 아래의 파일을 크롤링하는 경우 설정은 다음과 같습니다.

.. tabularcolumns:: |p{4cm}|p{8cm}|
.. list-table::
   :header-rows: 1

   * - 이름
     - 값
   * - 이름
     - Share 디렉터리
   * - 경로
     - file:/home/share

다른 매개변수는 기본 설정으로 충분합니다.

Windows 공유 폴더 크롤링
---------------------------

\\SERVER\SharedFolder 아래의 파일을 크롤링하는 경우 설정은 다음과 같습니다.

.. tabularcolumns:: |p{4cm}|p{8cm}|
.. list-table::
   :header-rows: 1

   * - 이름
     - 값
   * - 이름
     - 공유 폴더
   * - 경로
     - smb://SERVER/SharedFolder/

공유 폴더 액세스에 사용자 이름/비밀번호가 필요한 경우 왼쪽 메뉴의 [크롤러 > 파일 인증]에서 파일 인증 설정을 생성해야 합니다.
이 경우 설정은 다음과 같습니다.

.. tabularcolumns:: |p{4cm}|p{8cm}|
.. list-table::
   :header-rows: 1

   * - 이름
     - 값
   * - 호스트 이름
     - SERVER
   * - 스키마
     - SAMBA
   * - 사용자 이름
     - (입력하십시오)
   * - 비밀번호
     - (입력하십시오)

관련 항목
============

- :doc:`../config/crawler-basic`
- :doc:`fileauth-guide`
- :doc:`../config/datastore/ds-overview`
- :doc:`../config/search-basic`
- :doc:`../user/index`


.. |image0| image:: ../../../resources/images/en/15.7/admin/fileconfig-1.png
.. |image1| image:: ../../../resources/images/en/15.7/admin/fileconfig-2.png
.. pdf            :height: 940 px
